--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 
 <head>
     <title>Andrew Patyjewicz</title>
+
+    <style>
+        body {
+            background: orange;
+            font-family: helvetica;
+            text-align: center;
+            display: grid;
+            align-content:center;
+            min-height: 100vh;
+        }
+
+        h1 {
+            font-size: 48px;
+            text-transform: uppercase;
+            margin: 0;
+        }
+
+        p {
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
