--- a/index.html
+++ b/index.html
@@ -1,33 +1,19 @@
-<html>
-
+<!doctype html>
+<html lang="en">
 <head>
-    <title>Andrew Patyjewicz</title>
-
-    <style>
-        body {
-            background: orange;
-            font-family: helvetica;
-            text-align: center;
-            display: grid;
-            align-content:center;
-            min-height: 100vh;
-        }
-
-        h1 {
-            font-size: 48px;
-            text-transform: uppercase;
-            margin: 0;
-        }
-
-        p {
-            color: white;
-        }
-    </style>
+    <meta charset="utf-8" />
+    <title>Andrew Patyjewicz</title>  
+    <meta name="description" content="This is my Student Website." />
+    <meta name="viewport" content="width=device-width, intial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-    <h2> Hi, I am Andrew.</h2>
-    <p> I am an Interface Design student. This site is currently under construction. Soon it will contain links to my coursework for my classes at KCC within the the New Media Arts programme.  </p>
+    <h1> Hello! My name is Andrew.</h1>
+    <p> I am an Interface Design student. This site is currently under construction. Soon it will contain links to the coursework for my classes at KCC within the the New Media Arts programme.  </p>
+    <h2>My Courses</h2>
+    <ul>
+        <li><a href="art128/index.html">ART 128 Interface Programming I</a></li>
+    </ul>
 </body>
-
-<html>
+</html
