Made a ton of changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>Andrew Patyjewicz</title>  
@@ -8,12 +9,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-    <h1> Hello! My name is Andrew.</h1>
-    <p> I am an Interface Design student. This site is currently under construction. Soon it will contain links to the coursework for my classes at KCC within the the New Media Arts programme.  </p>
-    <h2>My Courses</h2>
-    <ul>
-        <li><a href="art128/index.html">ART 128 Interface Programming I</a></li>
-    </ul>
+    <header>
+        <div class="site-id">
+        <h1><a href="index.html">AP</a></h1>
+        </div>
+        <nav class=""site-nav">
+        <ul>
+<li><a href="art128/index.html">ART 128</a></li>
+<li><a href="notes/index.html">Notes</a></li>
+        </ul>
+    </nav>
+</header>
+    <main>
+       <section class="hero">
+        <h2>Hello! My name is Andrew.</h2>
+        <p> I am an Interface Design student. This site is currently under construction. Soon it will contain links to the coursework for my classes at KCC within the the New Media Arts programme.  </p>   
+    </section>
+    <section class="courses">
+        <h3>My Courses:</h3>
+        <ul>
+            <li><a href="art128/index.html">ART 128 Interface Programming I</a></li>
+        </ul>
+    </section>
+    </main>
+    
+    <footer>
+        <nav class="social-nav">
+            <ul>
+                <li><a href= "https://github.com/Eirean">My Github</a></li>
+                <li><a href="https://codepen.io/Eirean">My Codepen</a></li>
+                </ul>
+        </nav>
+        </footer>
 </body>
+
 </html
