--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Andrew Patyjewicz</title>  
-    <meta name="description" content="This is my Student Website." />
-    <meta name="viewport" content="width=device-width, intial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" 
+        content="This is my Student Website." />
+    <meta name="viewport" content="width=device-width, initial-scale1" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -15,7 +16,7 @@
         <div class="site-id">
         <h1><a href="index.html">AP</a></h1>
         </div>
-        <nav class=""site-nav">
+        <nav class="site-nav">
         <ul>
 <li><a href="art128/index.html">ART 128</a></li>
 <li><a href="notes/index.html">Notes</a></li>
@@ -24,7 +25,7 @@
 </header>
     <main>
        <section class="hero">
-        <h2>Hello! My name is Andrew.</h2>
+        <h2>Hello! I am Andrew.</h2>
         <p> I am an Interface Design student. This site is currently under construction. Soon it will contain links to the coursework for my classes at KCC within the the New Media Arts programme.  </p>   
     </section>
     <section class="courses">
