--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <title>Andrew Patyjewicz</title>  
     <meta name="description" 
-        content="This is my Student Website." />
-    <meta name="viewport" content="width=device-width, initial-scale1" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+        content="This is my Student Website.">
+    <meta name="viewport" content="width=device-width, initial-scale1">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -48,4 +48,4 @@
     </footer>
 </body>
 
-</html
+</html>
