--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Andrew Patyjewicz</title>  
     <meta name="description" 
         content="This is my Student Website.">
