--- a/notes/index.html
+++ b/notes/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Andrew Patyjewicz | Art 128</title>  
+    <title>Andrew Patyjewicz | Notes</title>  
     <meta name="description" 
         content="This is my Student Website.">
     <meta name="viewport" content="width=device-width, initial-scale1">
@@ -26,8 +26,8 @@
 
     <main>
        <section class="hero">
-            <h2>Art 128</h2>
-            <p> Interface Programming 1</p>   
+            <h2>Notes</h2>
+            <p> Front End Web Development Notes</p>   
         </section>
 
         <section class="coursework">
