--- a/art128/index.html
+++ b/art128/index.html
@@ -19,7 +19,7 @@
         <nav class="site-nav">
             <ul>
                 <li><a href="../art128/index.html">ART 128</a></li>
-                <li><a href="index.html">Notes</a></li>
+                <li><a href="../index.html">Notes</a></li>
             </ul>
         </nav>
     </header>
@@ -36,7 +36,7 @@
             <h3>Site #1: Student Site</h3>
             <ul>
                 <li><a href="../index.html">Student Site Home Page</a></li>
-                <li><a href="index.html">Student Site ART 128 PAGE</a></li>
+                <li><a href="../index.html">Student Site ART 128 PAGE</a></li>
             </ul>
         </div>
 
