--- a/notes/index.html
+++ b/notes/index.html
@@ -11,7 +11,7 @@
     <link href="../css/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body class="page-sub">
+<body class="page-sub page-notes">
     <header>
         <div class="site-id">
             <h1><a href="../index.html">AP</a></h1>
