Added art128 hero image

--- a/art128/index.html
+++ b/art128/index.html
@@ -11,7 +11,7 @@
     <link href="../css/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body class="page-sub">
+<body class="page-sub page-art128">
     <header>
         <div class="site-id">
             <h1><a href="../index.html">AP</a></h1>
