--- a/art128/base-content/index.html
+++ b/art128/base-content/index.html
@@ -17,8 +17,68 @@
 </head>
 <body>
 
-    <h1>A Base Blank Starter</h1>
-    <p>A base HTML + CSS + JS project folder and file setup.</p>
+    <h1>This is a Heading 1</h1>
+    <h2>This is a Heading 2</h2>
+    <h3>This is a Heading 3</h3>
+    <h4>This is a Heading 4</h4>
+    <h5>This is a Heading 5</h5>
+    <h6>This is a Heading 6</h6>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. This is <strong>something bold</strong> and this is <em>something italic</em>. And this is an <a href="#">inline link</a>. Libero ratione adipisci iusto, error ipsam enim! Voluptates a rerum soluta consequatur pariatur asperiores quod eum excepturi sit inventore commodi non quam aliquid est, sed atque adipisci consequuntur tempora possimus! Sapiente magnam illum molestiae cupiditate reiciendis consequatur voluptate aliquid autem optio culpa?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat asperiores, mollitia, ratione facilis veritatis quam illo itaque at, tempore dolorem facere. Ab, iure quidem. Veniam, inventore vitae quos quis recusandae nisi voluptatum harum, illo enim officia eveniet autem perferendis beatae doloribus culpa, in est minus deserunt fuga molestiae. Odit adipisci rem quibusdam, ut cupiditate tenetur necessitatibus esse vitae, placeat, excepturi provident nesciunt ducimus ipsa sunt. Quam fugit tenetur in debitis molestias. Eveniet, praesentium rerum! Libero?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem cum voluptatibus facilis placeat ab veniam laboriosam repellat eum.</p>
+
+    <h4>This is an unordered list:</h4>
+    <ul>
+        <li>List item</li>
+        <li>List item</li>
+        <li>List item
+            <ul>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+            </ul>
+        </li>
+        <li>List item</li>
+    </ul>
+
+    <h4>This is an ordered list:</h4>
+    <ol>
+        <li>List item</li>
+        <li>List item</li>
+        <li>List item
+            <ol>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+                <li>List item</li>
+            </ol>
+        </li>
+        <li>List item</li>
+        <li>List item</li>
+        <li>List item</li>
+    </ol>
+
+    <h4>Links:</h4>
+    <p>This is a <a href="#">link</a>.</p>
+
+<h4>Block Quotes</h4>
+    <blockquote>
+        This is a blockquote. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis deleniti saepe dicta voluptatem facere voluptatibus, quisquam ipsa quidem similique explicabo?
+        <cite>Citation Source</cite>
+    </blockquote>
+
+    <h4>Helper Classes</h4>
+    <p>This should be centered justified text.</p>
+
+    <h4>Images</h4>
+    <img src="http://placehold.it/1500x500" alt="This is a placeholder image">
+
+    <h4>Buttons</h4>
+    <a href="#" class="button">Default Button</a>
+    <a href="#" class="button alt">Alt Button</a>
+    <button>Button Element</button>
 
     <!-- MAIN JS FILE -->
     <script src="js/script.js"></script>
