Base Contet finished

--- a/art128/base-content/index.html
+++ b/art128/base-content/index.html
@@ -70,10 +70,10 @@
     </blockquote>
 
     <h4>Helper Classes</h4>
-    <p>This should be centered justified text.</p>
+    <p class="text-centered full-width">This should be centered justified text. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis exercitationem molestias doloremque illo, repellat ipsam libero sint provident vero cupiditate asperiores voluptatem distinctio laboriosam. Ipsum vel, corrupti iusto blanditiis ut placeat at aliquid doloremque quo in quam, suscipit sit harum qui excepturi vero illum facere iure enim impedit quisquam esse.</p>
 
     <h4>Images</h4>
-    <img src="http://placehold.it/1500x500" alt="This is a placeholder image">
+    <img src="http://placehold.it/1500x500" alt="This is a placeholder image" width="1500" height="500" />
 
     <h4>Buttons</h4>
     <a href="#" class="button">Default Button</a>
