--- a/art128/index.html
+++ b/art128/index.html
@@ -48,7 +48,8 @@
                 <li><a href="base-layout/index.html">Base Layout</a></li>
                 <li><a href="base-site/index.html">Base Site</a></li>
                 <li><a href="base-togglenav/index.html">Toggle Nav</a></li>
-                <li><a href="base-subpages/about.html">Base Sub Pages</a></li>
+                <li><a href="sitenam-multipagesite/index.html">Base Sub Pages</a></li>
+                <li><a href="sitenam-singlepagesite/index.html">Single Page Site</a></li>
             </ul>
         </div>
     
