--- a/art128/sitenam-singlepagesite/index.html
+++ b/art128/sitenam-singlepagesite/index.html
@@ -18,7 +18,8 @@
 
 <body id="top" >
 
-    <header class="site-header toggle-nav animated sticky">
+    <header class="site-header toggle-nav animated sticky" data-navstate="closed">
+
         <div class="container">
             <div class="site-id">
                 <h1><a href="#top" class="scroll">Site Name / single page version</a></h1>
