--- a/art128/sitenam-singlepagesite/index.html
+++ b/art128/sitenam-singlepagesite/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Site Name | Single Page Site</title>
-    <meta name="description" content="This is a starter HTML + CSS + JS boilerplate set of code for website projects" />
+    <meta name="description" content="This is a starter HTML + CSS + JS boilerplate set of code for website projects">
 
     <!-- FOR MOBILE / SMALL SCREENS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,7 +77,7 @@
             <div class="container">
                 <h3 class="section-title">About Us</h3>
                 <article>
-                    <h1> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
+                    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
     
                     <h2 class="subhead"> Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum ultrices augue vitae purus sodales eleifend.</h2>
     
