--- a/art128/sitenam-multipagesite/index.html
+++ b/art128/sitenam-multipagesite/index.html
@@ -15,20 +15,21 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body>
+<body id="top">
 
 
-    <header class="site-header toggle-nav" data-navstate="closed">
+    <header class="site-header toggle-nav animated sticky" data-navstate="closed">
+
         <div class="container">
             <div class="site-id">
-                <h1><a href="index.html">Site Name</a></h1>
+                <h1><a href="#top" class="scroll">Site Name / single page version</a></h1>
             </div>
             <nav class="site-nav">
                 <div class="menu-button navicon">Menu</div>
                 <ul>
-                    <li class="hidden"><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li class="hidden"><a class="scroll" href="#top">Home</a></li>
+                    <li><a class="scroll" href="#about">About</a></li>
+                    <li><a class="scroll" href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,11 +38,12 @@
     <main class="site-main">
         <div class="container">
             <section class="hero text centered">
-            
-                <h1>Lorem ipsum dolor sit amet.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi facilis impedit autem quia! Consequuntur, optio. Dolores provident voluptates eligendi dolor.</p>
-                <a href="#" class="button">CTA button</a>
-                <a href="#" class="button alt">alt CTA button</a>
+                <h2>This is the Hero Section</h2>
+                <p>This is the hero section on the top of a single page web site</p>
+                <p>
+                    <a href="#about" class="button scroll">Learn More About Us</a>
+                    <a href="#contact" class="button alt scroll">Contact Us</a>
+                </p>    
             </section>
         </div>
         
@@ -50,19 +52,19 @@
 
                 <div class="row">
                     <div class="column one-third">
-                        <img src="images/placeholder (1).gif" alt="Placeholder Image">
-                        <h2>Heading 2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aut voluptas magni doloremque commodi incidunt tempora sit quidem rem repudiandae!</p>
-                        <a href="#" class="button">Button</a>
-                    </div>
-                    <div class="column          one-third">
-                        <img src="images/placeholder (1).gif" alt="Placeholder Image">
+                        <img src="images/placeholder(1).gif" alt="Placeholder Image">
                         <h2>Heading 2</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aut voluptas magni doloremque commodi incidunt tempora sit quidem rem repudiandae!</p>
                         <a href="#" class="button">Button</a>
                     </div>
                     <div class="column one-third">
-                        <img src="images/placeholder (1).gif" alt="Placeholder Image">
+                        <img src="images/placeholder(1).gif" alt="Placeholder Image">
+                        <h2>Heading 2</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aut voluptas magni doloremque commodi incidunt tempora sit quidem rem repudiandae!</p>
+                        <a href="#" class="button">Button</a>
+                    </div>
+                    <div class="column one-third">
+                        <img src="images/placeholder(1).gif" alt="Placeholder Image">
                         <h2>Heading 2</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aut voluptas magni doloremque commodi incidunt tempora sit quidem rem repudiandae!</p>
                         <a href="#" class="button">Button</a>
