--- a/art128/index.html
+++ b/art128/index.html
@@ -54,9 +54,9 @@
         </div>
     
         <div class="project">
-            <h3>Site #3: ________</h3>
+            <h3>Site #3: Foster Botanical Gardens</h3>
             <ul>
-                <li>[ Assignments Coming Soon ]</li>
+                <li>UI Design</li>
                 <li>[ ... ]</li>
                 <li>[ ... ]</li>
             </ul>
