--- a/art128/index.html
+++ b/art128/index.html
@@ -56,7 +56,7 @@
         <div class="project">
             <h3>Site #3: Foster Botanical Gardens</h3>
             <ul>
-                <li>UI Design</li>
+                <li><a href="../images/FosterBotanicalmk_2.5.pdf">UI Design</a></li>
                 <li>[ ... ]</li>
                 <li>[ ... ]</li>
             </ul>
