--- a/art128/final v-1/index.html
+++ b/art128/final v-1/index.html
@@ -7,9 +7,13 @@
 
     <!-- FOR MOBILE / SMALL SCREENS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <!-- FOR IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!-- ADOBE FONTS -->
+    <link rel="stylesheet" href="https://use.typekit.net/nxc3lmn.css">
+
 
     <!-- MAIN CSS FILE-->
     <link rel="stylesheet" href="css/style.css">
