--- a/art128/index.html
+++ b/art128/index.html
@@ -62,6 +62,7 @@
                     <h3>Coded Drafts</h3>
                     <ul>
                         <li><a href="final v-1/index.html">Final V_1</a></li>
+                        <li><a href="final v-2/index.html">Final V_2</a></li>
                         <li>[ ... ]</li>
                     </ul>
             </div>
