--- a/art128/final v-2/index.html
+++ b/art128/final v-2/index.html
@@ -22,7 +22,7 @@
 
 <body id="top">
 
-    <header class="site-header toggle-nav animated sticky" data-navstate="closed">
+    <header class="site-header toggle-nav animated ontop" data-navstate="closed">
 
         <div class="container">
             <div class="site-id">
@@ -40,14 +40,14 @@
     </header>
     
     <main class="site-main">
-        <div class="container">
-            <section class="hero text centered">
-                <p>
-                    <a href="#about" class="button scroll">Learn More About Us</a>
-                    <a href="#contact" class="button alt scroll">Contact Us</a>
-                </p>    
-            </section>
-        </div>
+
+        <section class="hero text centered">
+            <p>
+                <a href="#about" class="button scroll">Learn More About Us</a>
+                <a href="#contact" class="button alt scroll">Contact Us</a>
+            </p>    
+        </section>
+
         
         <section>
             <div class="container">
