playing with logo

--- a/art128/final v-2/index.html
+++ b/art128/final v-2/index.html
@@ -42,6 +42,10 @@
     <main class="site-main">
 
         <section class="hero text centered">
+            <div class="logowrapper">
+                <img src="images/logo.svg" width="500" height="170" alt="">
+            </div>
+            
             <p>
                 <a href="#about" class="button scroll">Learn More About Us</a>
                 <a href="#contact" class="button alt scroll">Contact Us</a>
