--- a/art128/final v-2/index.html
+++ b/art128/final v-2/index.html
@@ -204,7 +204,7 @@
 
                 <section id="atimeline">
                     <div class="container">
-                        <h2>Timeline</h2>
+                        <h2 style="color:aliceblue;">Timeline</h2>
                         <div class="timeline">
                             <div class="tcontainer left">
                                 <div class="content">
@@ -242,6 +242,7 @@
                 <section id="gardens">
                     <div class="container">
                         <h2>Gardens</h2>
+                        <img src="images/map2.png" alt="">
                     </div>
                 </section>
 
