--- a/art128/final v-3/index.html
+++ b/art128/final v-3/index.html
@@ -242,7 +242,7 @@
                 <section id="gardens">
                     <div class="container">
                         <h2>Gardens</h2>
-                        <img src="images/map2.png" alt="">
+                        <img src="images/fostermap.svg" alt="">
                     </div>
                 </section>
 
