--- a/art128/final v-3/index.html
+++ b/art128/final v-3/index.html
@@ -33,12 +33,12 @@
             <div class="menu-button navicon">Menu</div>
             <ul>
                 <li class="hide-visually"><a class="scroll" href="#top">HOME</a></li>
-                <<li><a class="scroll" href="#top">HOME</a></li>
-                    <li><a class="scroll" href="#about-cg">HISTORY</a></li>
-                    <li><a class="scroll" href="#atimeline">TIMELINE</a></li>
-                    <li><a class="scroll" href="#gardens">GARDENS</a></li>
-                    <li><a class="scroll" href="#about">PROGRAMMES</a></li>
-                    <li><a class="scroll" href="#contact">CONTACT</a></li>
+                <li><a class="scroll" href="#top">HOME</a></li>
+                <li><a class="scroll" href="#about-cg">HISTORY</a></li>
+                <li><a class="scroll" href="#atimeline">TIMELINE</a></li>
+                <li><a class="scroll" href="#gardens">GARDENS</a></li>
+                <li><a class="scroll" href="#about">PROGRAMMES</a></li>
+                <li><a class="scroll" href="#contact">CONTACT</a></li>
             </ul>
         </nav>
 
@@ -50,8 +50,6 @@
             <div class="logowrapper">
                 <img src="images/logo.svg" width="500" height="170" alt="">
             </div>
-
-
         </section>
 
         <div class="content-wrapper">
@@ -72,34 +70,6 @@
 
 
 
-                <section>
-                    <div class="container">
-                        <div class="row">
-                            <div class="column one-third">
-                                <img src="images/Flowerred.jpg" alt="Placeholder Image">
-                                <h2>About</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aut voluptas magni
-                                    doloremque commodi incidunt tempora sit quidem rem repudiandae!</p>
-                                <a href="#" class="button">Button</a>
-                            </div>
-                            <div class="column one-third">
-                                <img src="images/Patyjewicz, Andrew Comp B-4.jpg" alt="Placeholder Image">
-                                <h2>Gardens</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aut voluptas magni
-                                    doloremque commodi incidunt tempora sit quidem rem repudiandae!</p>
-                                <a href="#" class="button">Button</a>
-                            </div>
-                            <div class="column one-third">
-                                <img src="images/Patyjewicz, Andrew-FP-SPRING 2022_Gecko  (26).jpg"
-                                    alt="Placeholder Image">
-                                <h2>Programmes</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aut voluptas magni
-                                    doloremque commodi incidunt tempora sit quidem rem repudiandae!</p>
-                                <a href="#" class="button">Button</a>
-                            </div>
-                        </div>
-                    </div>
-                </section>
 
                 <div id="about-cg">
                     <div class="top-banner">
@@ -115,11 +85,13 @@
 
                                 <div class="date">Est. 1853 </div>
 
+                                <!-- <p>Thomas R. Foster</p> -->
+
                             </div>
                             <div class="column two-thirds">
 
 
-                                <p class="dropcap">Foster Botanical Garden, measuring 13.5 acres (5.5 ha), is one of
+                                <p class="dropcap">Foster Botanical Garden, measuring 13.5 acres, is one of
                                     five public botanical gardens on Oahu. It is located at 50 North Vineyard Boulevard,
                                     Honolulu, Hawaii, United States, near Chinatown at the intersection of Nu'uanu
                                     Avenue and Vineyard Boulevard. Foster is in a highly urban area with strip malls,
@@ -131,8 +103,8 @@
 
                                 <h3>Origins</h3>
                                 <p>In 1853, <a href="https://en.wikipedia.org/wiki/Kalama">Queen Kalama</a> leased 4.6
-                                    acres (1.9 ha) of land to <a
-                                        href="https://en.wikipedia.org/wiki/William_Hillebrand">William Hillebrand</a>,
+                                    acres of land to <a href="https://en.wikipedia.org/wiki/William_Hillebrand">William
+                                        Hillebrand</a>,
                                     a German physician and botanist who built his home and planted trees on the site.
                                     During his stay, he introduced a number of plants to Hawaii, as well as deer and
                                     mynah birds. Many of the large trees growing today on the Upper Terrace were
@@ -143,21 +115,21 @@
                                     the land and her home to the City and County of Honolulu, with the provision that
                                     the city accept and forever keep and properly maintain the (gardens) as a public and
                                     tropical park to be known and called Foster Park. At the time, the gardens were
-                                    roughly 5.5 acres (2.2 ha).[3]</p>
+                                    roughly 5.5 acres.</p>
 
                                 <p> Harold Lyon, the first director of Foster Garden, introduced thousands of new plants
                                     and trees to Hawaii, and started its famous orchid collection. Paul Weissich,
-                                    director from 1957 to 1989, expanded Foster Garden to 14 acres (5.7 ha) of native
+                                    director from 1957 to 1989, expanded Foster Garden to 14 acres of native
                                     plants, and developed four additional sites on Oahu Island to create the 650 acres
-                                    (260 ha) Honolulu Botanical Gardens system. Taken as a whole, these five gardens
+                                    Honolulu Botanical Gardens system. Taken as a whole, these five gardens
                                     feature rare species from tropical environments ranging from desert to rainforest,
                                     comprising the largest and most diverse tropical plant collection in the United
-                                    States.[3]</p>
+                                    States.</p>
 
                                 <p> The Garden is the inspiration for a line in Joni Mitchell's 1970 folk song <a
                                         href="https://en.wikipedia.org/wiki/Big_Yellow_Taxi">"Big Yellow Taxi"</a>:
                                     "Took all the trees, put 'em in a tree museum / Then charge people a dollar and a
-                                    half just to see 'em.".[4]</p>
+                                    half just to see 'em.".</p>
 
 
 
@@ -177,7 +149,7 @@
                                     trees, including a Sacred Fig which is a clone descendant of the Bodhi tree that
                                     Buddha sat under for inspiration, a sapling of which was gifted to Mary Foster by <a
                                         href="https://en.wikipedia.org/wiki/Anagarika_Dharmapala">Anagarika
-                                        Dharmapala</a> in 1913.[citation needed] All told, it contains 25 of about 100
+                                        Dharmapala</a> in 1913. All told, it contains 25 of about 100
                                     Oahu trees designated as exceptional.</p>
 
                                 <p> The garden also contains several memorials and sculptures:</p>
@@ -226,7 +198,7 @@
                                     <p>Upon her death in 1930, Mary Foster bequeathed the land and her home to the City
                                         and County of Honolulu, with the provision that the city accept and forever keep
                                         and properly maintain the gardens as a public and tropical park to be known and
-                                        called Foster Park.
+                                        called Foster Park.</p>
                                 </div>
                             </div>
                             <div class="tcontainer right">
@@ -237,18 +209,61 @@
                                         650 acres Honolulu Botanical Gardens system.</p>
                                 </div>
                             </div>
+                            <div class="tcontainer left">
+                                <div class="content">
+                                    <h2>1993</h2>
+                                    <p>Foster Botanical Garden added to the Register of Historic Places</p>
+                                </div>
+                            </div>
                 </section>
 
                 <section id="gardens">
-                    <div class="container">
+                    <div class="img-magnifier-container">
                         <h2>Gardens</h2>
-                        <img src="images/fostermap.svg" alt="">
+                        <img id="fostermap" src="images/fostermap.svg" width="1000" height="600" alt="">
+                        <script>
+                            magnify("images/fostermap.svg", 3);
+                        </script>
                     </div>
                 </section>
 
                 <section id="programmes">
-                    <div class="container">
-                        <h2>Programmes</h2>
+                    <div class="two-column container">
+                        <h1>Programmes</h1>
+                        <div class="row">
+                            <div class="column one-half">
+                                <h2>Fun in the Mud</h2>
+                                <h3 class="subhead">Water lilies, Lotus, Bog Plants, Oh My!</h3>
+
+                                <p>Learn about the care, feeding and propagation of water lilies in this workshop that
+                                    will
+                                    have you playing in the mud. Discover how easy it is to set up a balanced water
+                                    garden
+                                    naturally. Wear old shoes as this field trip can be quite muddy. Please note that
+                                    this
+                                    workshop requires registration and a small fee to benefit the Friends of Honolulu
+                                    Botanical Gardens. As a thank you for joining us you'll receive 10% off your
+                                    purchase.
+                                </p>
+
+                                <h2>Fun in the Mud Workshop</h2>
+                                <p>Saturday July 26 at 10AM</p>
+                                <p>Mulkern Nursery, 41-639 Kaulukanu St, Waimanalo</p>
+                                <p>$15 for members, $20 for non-members of Friends of Honolulu Botanical Gardens</p>
+
+                                <h4>REGISTER: Call 537-1708</h4>
+
+                                <p>Questions? Call the nursery at 396-6595</p>
+
+                                <p>*Please remember our nursery is muddy and slippery so bring appropriate footwear and
+                                    watch your step!</p>
+                            </div>
+
+                            <div class="column one-half">
+                                <img src="images/hbg_spring_program_flyer.jpg" width="500" height="170" alt="">
+                            </div>
+
+                        </div>
                     </div>
                 </section>
 
@@ -348,6 +363,9 @@
 
     <!-- MAIN JS FILE -->
     <script src="js/script.js"></script>
+
+    <!-- MAIN JS FILE -->
+    <script>magnify("gardens", 3);</script>
 
 
 </body>
