--- a/art128/final v-3/index.html
+++ b/art128/final v-3/index.html
@@ -86,6 +86,10 @@
                                 <div class="date">Est. 1853 </div>
 
                                 <!-- <p>Thomas R. Foster</p> -->
+                                <figure>
+                                    <img src="images/thomasfoster.jpg" alt="photo of Thomas Foster">
+                                    <figcaption>Thomas Foster</figcaption>
+                                </figure>
 
                             </div>
                             <div class="column two-thirds">
@@ -235,7 +239,8 @@
                                 <h2>Fun in the Mud</h2>
                                 <h3 class="subhead">Water lilies, Lotus, Bog Plants, Oh My!</h3>
 
-                                <p>Learn about the care, feeding and propagation of water lilies in this workshop that
+                                <p class="dropcap">Learn about the care, feeding and propagation of water lilies in this
+                                    workshop that
                                     will
                                     have you playing in the mud. Discover how easy it is to set up a balanced water
                                     garden
@@ -260,7 +265,7 @@
                             </div>
 
                             <div class="column one-half">
-                                <img src="images/hbg_spring_program_flyer.jpg" width="500" height="170" alt="">
+                                <img src="images/hbg_spring_program_flyer.jpg" width="500" height="200" alt="">
                             </div>
 
                         </div>
