made changes to v3

--- a/art128/final v-3/index.html
+++ b/art128/final v-3/index.html
@@ -222,12 +222,39 @@
                 </section>
 
                 <section id="gardens">
-                    <div class="img-magnifier-container">
-                        <h2>Gardens</h2>
-                        <img id="fostermap" src="images/fostermap.svg" width="1000" height="600" alt="">
-                        <script>
-                            magnify("images/fostermap.svg", 3);
-                        </script>
+                    <div class="container">
+                        <div class="row">
+                            <div class="column one-third">
+                                <h2>Gardens</h2>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas earum officia
+                                    deserunt nisi dolorem nemo optio sed voluptatum vero! Enim ipsa a alias. Adipisci
+                                    porro ex dignissimos explicabo atque quisquam!</p>
+                                <h3>Butterfly Garden</h3>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, accusamus,
+                                    commodi sunt eos impedit, illo necessitatibus repudiandae tempora aut error ullam
+                                    earum consequatur vel fugiat. Sed numquam optio doloremque atque!</p>
+                                <h3>Croton Garden</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum vel officiis pariatur
+                                    voluptatum. Magnam deleniti ipsum voluptas cumque vitae quo est cupiditate sit?
+                                    Maiores pariatur veniam eius rem ducimus delectus!</p>
+                                <h3>Lyon Garden</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem hic ipsum nisi
+                                    nihil officiis quas. Voluptatum veniam error commodi beatae, ratione dicta
+                                    consectetur tempora officia impedit doloremque assumenda eveniet totam?</p>
+                                <h3>Palm Garden</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum ex a numquam.
+                                    Itaque, neque. Libero, soluta ea quia praesentium inventore incidunt porro sequi
+                                    magni ducimus ut est, aliquam earum exercitationem!</p>
+                                <h3>Economic Garden</h3>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, quisquam corrupti aut
+                                    culpa ut ratione illum eius, ea modi nesciunt molestias nostrum provident! At magnam
+                                    tenetur id enim libero saepe!</p>
+                            </div>
+
+                            <div class="column two-thirds">
+                                <img src="images/fostermap.svg" alt="">
+                            </div>
+                        </div>
                     </div>
                 </section>
 
