playing with the footer

--- a/art128/final v-3/index.html
+++ b/art128/final v-3/index.html
@@ -377,14 +377,22 @@
     </main>
 
     <footer class="site-footer">
-        <div class="container">
-            <nav class="site-nav">
-                <ul>
-                    <li><a class="scroll" href="#top">Home</a></li>
-                    <li><a class="scroll" href="#about">About</a></li>
-                    <li><a class="scroll" href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+        <div class="two-column container">
+            <div class="row">
+                <div class="column one-third">
+                    <nav class="site-nav">
+                        <ul>
+                            <li><a class="scroll" href="#top">Home</a></li>
+                            <li><a class="scroll" href="#about">About</a></li>
+                            <li><a class="scroll" href="#contact">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="column two-thirds">
+                    <img src="images/logo.svg">
+                </div>
+            </div>
         </div>
     </footer>
 
