--- a/art128/final v-4/index.html
+++ b/art128/final v-4/index.html
@@ -253,6 +253,13 @@
 
                             <div class="column two-thirds">
                                 <img src="images/fostermap.svg" alt="">
+                                <h2>Find Us</h2>
+                                <figure>
+                                    <iframe
+                                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3716.853258725816!2d-157.86160632554078!3d21.316813880405647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c006e77c0ef6907%3A0xe5887e7638b6976a!2sFoster%20Botanical%20Garden!5e0!3m2!1sen!2sus!4v1685260898559!5m2!1sen!2sus"
+                                        width="750" height="800" style="border:0;" allowfullscreen="" loading="lazy"
+                                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                </figure>
                             </div>
                         </div>
                     </div>
@@ -293,6 +300,8 @@
 
                             <div class="column one-half">
                                 <img src="images/hbg_spring_program_flyer.jpg" width="500" height="200" alt="">
+
+
                             </div>
 
                         </div>
