--- a/art128/final v-4/index.html
+++ b/art128/final v-4/index.html
@@ -37,7 +37,7 @@
                 <li><a class="scroll" href="#about-cg">HISTORY</a></li>
                 <li><a class="scroll" href="#atimeline">TIMELINE</a></li>
                 <li><a class="scroll" href="#gardens">GARDENS</a></li>
-                <li><a class="scroll" href="#about">PROGRAMMES</a></li>
+                <li><a class="scroll" href="#programmes">PROGRAMMES</a></li>
                 <li><a class="scroll" href="#contact">CONTACT</a></li>
             </ul>
         </nav>
@@ -391,9 +391,9 @@
                 <div class="column one-third">
                     <nav class="site-nav">
                         <ul>
-                            <li><a class="scroll" href="#top">Home</a></li>
-                            <li><a class="scroll" href="#about">About</a></li>
-                            <li><a class="scroll" href="#contact">Contact</a></li>
+                            <li><a class="scroll button" href="#top">Home</a></li>
+                            <li><a class="scroll button" href="#about-cg">About</a></li>
+                            <li><a class="scroll button" href="#contact">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
