--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Andrew Patyjewicz</title>  
-    <meta name="description" 
-        content="This is my Student Website.">
+    <title>Andrew Patyjewicz</title>
+    <meta name="description" content="This is my Student Website.">
     <meta name="viewport" content="width=device-width, initial-scale1">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -19,15 +18,18 @@
         <nav class="site-nav">
             <ul>
                 <li><a href="art128/index.html">ART 128</a></li>
+                <li><a href="art249/index.html"></a>ART 249</a></li>
                 <li><a href="notes/index.html">Notes</a></li>
+
             </ul>
         </nav>
     </header>
 
     <main>
-       <section class="hero">
+        <section class="hero">
             <h2>Hello! I am Andrew.</h2>
-            <p> I am an Interface Design student. This site is currently under construction. Soon it will contain links to the coursework for my classes at KCC within the the New Media Arts programme.  </p>   
+            <p> I am an Interface Design student. This site is currently under construction. Soon it will contain links
+                to the coursework for my classes at KCC within the the New Media Arts programme. </p>
         </section>
 
         <section class="courses">
@@ -37,11 +39,11 @@
             </ul>
         </section>
     </main>
-    
+
     <footer>
         <nav class="social-nav">
             <ul>
-                <li><a href= "https://github.com/Eirean">My Github</a></li>
+                <li><a href="https://github.com/Eirean">My Github</a></li>
                 <li><a href="https://codepen.io/Eirean">My Codepen</a></li>
             </ul>
         </nav>
