--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <nav class="site-nav">
             <ul>
                 <li><a href="art128/index.html">ART 128</a></li>
-                <li><a href="art249/index.html"></a>ART 249</a></li>
+                <li><a href="art249/index.html">ART 249</a></li>
+                <li><a href="art298/index.html">ART 298</a></li>
                 <li><a href="notes/index.html">Notes</a></li>
 
             </ul>
@@ -36,6 +37,8 @@
             <h3>My Courses:</h3>
             <ul>
                 <li><a href="art128/index.html">ART 128 Interface Programming I</a></li>
+                <li><a href="art249/index.html">ART 249 Interface Design II</a></li>
+                <li><a href="art298/index.html">ART 298 Work/Study Studio</a></li>
             </ul>
         </section>
     </main>
