--- a/art298/index.html
+++ b/art298/index.html
@@ -11,7 +11,7 @@
     <link href="../css/style.css" rel="stylesheet" type="text/css">
 </head>
 
-<body class="page-sub page-art249">
+<body class="page-sub page-art298">
 
     <header>
         <div class="site-id">
@@ -29,16 +29,16 @@
 
     <main>
         <section class="hero">
-            <h2>Art 249</h2>
-            <p> Interface Programming 1</p>
+            <h2>Art 298</h2>
+            <p>Workshop</p>
         </section>
 
         <section class="coursework">
 
             <div class="website">
-                <h3>Project #1</h3>
-                <h1>Web Site</h1>
-                <h3>A bespoke client-based website UI with a design system</h3>
+                <h3>Project #2</h3>
+                <h1>Mobile App</h1>
+                <h3>A client-based mobile app UI design with interactive prototype.</h3>
                 <ul>
                     <li><a href="#">Project Brief</a></li>
                 </ul>
@@ -46,7 +46,7 @@
                 <h4>Conceptual Plans</h4>
 
                 <ul>
-                    <li><a href="#">Site Map</a></li>
+                    <li><a href="#">App Map / User Flow Chart</a></li>
                     <li><a href="#">Lo-Fi Wireframes / Protoype</a></li>
                     <li><a href="#">Design System / Style Tiles</a></li>
                 </ul>
